--- a/projects/02_trivia_api/Pipfile
+++ b/projects/02_trivia_api/Pipfile
@@ -20,6 +20,8 @@ Jinja2 = "==2.10.1"
 MarkupSafe = "==1.1.1"
 SQLAlchemy = "==1.3.4"
 Werkzeug = "==0.15.4"
+flask-migrate = "*"
+nodeenv = "*"
 
 [requires]
 python_version = "3.7"
